<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onnx_to_trt</name>
  <version>0.0.1</version>
  <description>Package for handling ONNX-Tensorrt conversion</description>
  <maintainer email="aaronchongth@gmail.com">Aaron</maintainer>
  <license>MIT</license>
  <author>Aaron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
